Fix HotCache tests failing on InaccessibleObjectException by oracle.eclipselink. Add missing -addOpens.  (main->ce-main @ 95068) Verified fix addressed issue on my mac and in shelf build Coh-Java-main-linux-jdk18 #185.
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 95069]